fix: replace getFirst with get(0)